--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
   </head>
   <body>
     <header class="header-wrapper">
+      <div class="header">
+        <div class="checkbox-container">
+          <div class="checkbox-wrapper">
+            <input type="checkbox" id="toggle">
+            <label class="checkbox" for="toggle">
+              <div class="trace"></div>
+              <div class="trace"></div>
+              <div class="trace"></div>
+            </label>
+            <div class="menu"></div>
+            <nav class="menu-items">
+              <ul>
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#">Sobre</a>
+                </li>
+                <li>
+                  <a href="#">Projetos</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
       <h1>Jodecir Neto</h1>
       <h2>Web Developer</h2>
       <div class="social-media">
