--- a/index.html
+++ b/index.html
@@ -43,5 +43,34 @@
         <a href="https://github.com/Jodecir">Github</a>
       </div>
     </header>
+    <div class="container">
+      <div class="card-container">
+        <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+          consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+          consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+        </div>
+        <div class="card">
+          <div class="card-wrapper">
+            <h2>Projeto 1</h2>
+            <p>Descrição</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <div class="card">
+          <div class="card-wrapper">
+            <h2>Projeto 2</h2>
+            <p>Descrição</p>
+          </div>
+        </div>
+        <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+          consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+          consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+        </div>
+      </div>
+    </div>
   </body>
 </html>
