--- a/index.html
+++ b/index.html
@@ -72,5 +72,8 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      Criatividade é a arte de conectar ideias 
+    </footer>
   </body>
 </html>
