--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="author" content="Jodecir Neto">
 		<link rel="icon" href="icon/favicon.ico">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/responsive.css">
   </head>
   <body>
     <header class="header-wrapper">
