UPDATE website design

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Portfolio</title>
+    <title>Portfólio</title>
 		<meta http-equiv="content-language" content="pt-br">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="Jodecir Neto">
@@ -37,7 +37,7 @@
           </div>
         </div>
       </div>
-      <h1>Jodecir Neto</h1>
+      <h1 class="window-frame">Jodecir Neto</h1>
       <h2>Web Developer</h2>
       <div class="social-media">
         <a href="https://www.linkedin.com/in/jodecir/">Linkedin</a>
@@ -46,30 +46,31 @@
     </header>
     <div class="container">
       <div class="card-container">
+        <div class="card">
+          <div class="card-wrapper">
+            <h2>Instagram</h2>
+            <p>Feito com HTML , CSS e JS</p>
+          </div>
+        </div>
+        <div>
+          <ul>
+            <video class="video_trigger" width="400" height="350" controls>
+              <source src="https://dms.licdn.com/playlist/C5605AQHFMG-Syi-iNw/mp4-720p-30fp-crf28/0/1620063319227?e=1620226800&v=beta&t=cjXgdh2iTS29IPrLSFVcW0o-6_VslO2cl6MEgfGjSBI">
+            </video>
+          </ul>
+        </div>
+      </div>
+      <div class="card-container">
         <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
           consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
           consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
         </div>
-        <div class="card">
-          <div class="card-wrapper">
-            <h2>Projeto 1</h2>
-            <p>Descrição</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card-container">
         <div class="card">
           <div class="card-wrapper">
             <h2>Projeto 2</h2>
-            <p>Descrição</p>
+            <p>WIP</p>
           </div>
-        </div>
-        <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
-          consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
-          consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
         </div>
       </div>
     </div>
