UPDATE video portfolio to gif portfolio

--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
             <p>Feito com HTML , CSS e JS</p>
           </div>
         </div>
-        <div>
-          <ul>
-            <video class="video_trigger" width="400" height="350" controls>
-              <source src="https://dms.licdn.com/playlist/C5605AQHFMG-Syi-iNw/mp4-720p-30fp-crf28/0/1620063319227?e=1620324000&v=beta&t=JpNHz1ixEXanvaUg5Z0TBZTPDtSbe2sO5DtrDH2Rz0w">
-            </video>
-          </ul>
+        <div class="card">
+          <div class="card-extra">
+            <img src="gifs/instagram.gif" alt="Instagram Preview">
+          </div>
         </div>
       </div>
       <div class="card-container">
