--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
         </div>
       </div>
-      <h1 class="window-frame">Jodecir Neto</h1>
+      <h1>Jodecir Neto</h1>
       <h2>Web Developer</h2>
       <div class="social-media">
         <a href="https://www.linkedin.com/in/jodecir/">Linkedin</a>
@@ -72,8 +72,8 @@
         </div>
       </div>
     </div>
-    <footer class="footer">
-      Criatividade é a arte de conectar ideias 
+    <footer>
+      <p class="window-frame">Criatividade é a arte de conectar ideias</p> 
     </footer>
   </body>
 </html>
