CREATE about-me text

--- a/index.html
+++ b/index.html
@@ -48,26 +48,23 @@
       <div class="card-container">
         <div class="card">
           <div class="card-wrapper">
-            <h2>Instagram</h2>
-            <p>Feito com HTML , CSS e JS</p>
+            <h2>Sobre</h2>
+            <p>MIM</p>
           </div>
         </div>
+        <div class="card-text" id="about">Oi, Meu nome é Jodecir Neto e sou um Web-Developer, todos os dias me foco em dar uma experiência completa da linguagem que estou trabalhando, com funções recentes e diversas, meu objetivo é sempre aprimorar meu desenvolvimento nas aplicações que faço.
+        </div>
+      </div>
+      <div class="card-container">
         <div class="card">
           <div class="card-extra">
             <img src="gifs/instagram.gif" alt="Instagram Preview">
           </div>
         </div>
-      </div>
-      <div class="card-container">
-        <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
-          consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
-          consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
-        </div>
         <div class="card">
           <div class="card-wrapper">
-            <h2>Projeto 2</h2>
-            <p>WIP</p>
+            <h2>Instagram</h2>
+            <p>Feito com HTML , CSS e JS</p>
           </div>
         </div>
       </div>
