--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>MIM</p>
           </div>
         </div>
-        <div class="card-text" id="about">Oi, Meu nome é Jodecir Neto e sou um Web-Developer, todos os dias me foco em dar uma experiência completa da linguagem que estou trabalhando, com funções recentes e diversas, meu objetivo é sempre aprimorar meu desenvolvimento nas aplicações que faço.
+        <div class="card-text" id="about">Oi, Meu nome é Jodecir Neto e sou um Web-Developer, tenho uma personalidade INTP e prefiro estudar em lugares calmos, todos os dias me foco em estudar para dar uma experiência completa da linguagem que estou trabalhando, focando em funções diversas e recentes, meu objetivo é sempre aprimorar meu desenvolvimento nas aplicações que faço.
         </div>
       </div>
       <div class="card-container">
