CREATE back to top button

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
       </div>
     </div>
+    <a href="#" class="back-to-top-btn"></a>
     <footer>
       <p class="window-frame">Criatividade é a arte de conectar ideias</p> 
     </footer>
