REMOVE obsolete metadata from index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <title>Portfólio</title>
-		<meta http-equiv="content-language" content="pt-br">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="Jodecir Neto">
 		<link rel="icon" href="icon/favicon.ico">
