--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
         <a href="https://www.linkedin.com/in/jodecir/">Linkedin</a>
         <a href="https://github.com/Jodecir">Github</a>
       </div>
+      <div class="scroll-down">
+        <a href="#about" class="scroll-down-link">
+          <div class="scroll-mouse">
+            <div class="whell"></div>
+          </div>
+        </a>
+      </div>
     </header>
     <div class="container">
       <div class="card-container">
