--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <a href="#">Home</a>
                 </li>
                 <li>
-                  <a href="#">Sobre</a>
+                  <a href="#about">Sobre</a>
                 </li>
                 <li>
                   <a href="#">Projetos</a>
