--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a href="#about">Sobre</a>
                 </li>
                 <li>
-                  <a href="#">Projetos</a>
+                  <a href="#projects">Projetos</a>
                 </li>
               </ul>
             </nav>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="card-container">
-        <div class="card">
+        <div class="card" id="projects">
           <div class="card-extra">
             <img src="gifs/instagram.gif" alt="Instagram Preview">
           </div>
