--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="icon" href="icon/favicon.ico">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
+    <script src="js/typewriting.js" defer></script>
   </head>
   <body>
     <header class="header-wrapper">
