--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="author" content="Jodecir Neto">
 		<link rel="icon" href="icon/favicon.ico">
 		<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/responsive.css">
     <script src="js/typewriting.js" defer></script>
   </head>
