UPDATE name of header label for menu-bars

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="checkbox-container">
           <div class="checkbox-wrapper">
             <input type="checkbox" id="toggle">
-            <label class="checkbox" for="toggle">
+            <label class="menu-bars" for="toggle">
               <div class="trace"></div>
               <div class="trace"></div>
               <div class="trace"></div>
