--- a/index.html
+++ b/index.html
@@ -71,8 +71,24 @@
         </div>
         <div class="card">
           <div class="card-wrapper">
+            <a href="https://jodecir.github.io/instagram-dio/"></a>
             <h2>Instagram</h2>
-            <p>Feito com HTML , CSS e JS</p>
+            <p>Refeito em HTML , CSS e JS</p>
+            <p>Foco em Flexbox</p>
+          </div>
+        </div>
+      </div>
+      <div class="card-container">
+        <div class="card">
+          <div class="card-wrapper">
+            <h2>5w1H</h2>
+            <p>feito em HTML , CSS e JS</p>
+            <p>Utilizando localStorage</p>
+          </div>
+        </div>
+        <div class="card" id="projects">
+          <div class="card-extra">
+            <img src="gifs/5w1h.gif" alt="5w1h Preview">
           </div>
         </div>
       </div>
