UPDATE menu name to menu-background

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <div class="trace"></div>
               <div class="trace"></div>
             </label>
-            <div class="menu"></div>
+            <div class="menu-background"></div>
             <nav class="menu-items">
               <ul>
                 <li>
