UPDATE social-medias with target blank

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <h1>Jodecir Neto</h1>
       <h2>Web Developer</h2>
       <div class="social-media">
-        <a href="https://www.linkedin.com/in/jodecir/">Linkedin</a>
-        <a href="https://github.com/Jodecir">Github</a>
+        <a href="https://www.linkedin.com/in/jodecir/" target="_blank">Linkedin</a>
+        <a href="https://github.com/Jodecir" target="_blank">Github</a>
       </div>
       <div class="scroll-down">
         <a href="#about" class="scroll-down-link">
