UPDATE project img with href

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <div class="container">
       <div class="card-container">
-        <div class="card">
+        <div class="card bg">
           <div class="card-wrapper">
             <h2>Sobre</h2>
             <p>MIM</p>
@@ -66,12 +66,13 @@
       <div class="card-container">
         <div class="card" id="projects">
           <div class="card-extra">
-            <img src="gifs/instagram.gif" alt="Instagram Preview">
+            <a href="https://jodecir.github.io/instagram-dio/">
+              <img src="gifs/instagram.gif" alt="Instagram Preview">
+            </a>
           </div>
         </div>
-        <div class="card">
+        <div class="card bg">
           <div class="card-wrapper">
-            <a href="https://jodecir.github.io/instagram-dio/"></a>
             <h2>Instagram</h2>
             <p>Refeito em HTML , CSS e JS</p>
             <p>Foco em Flexbox</p>
@@ -79,7 +80,7 @@
         </div>
       </div>
       <div class="card-container">
-        <div class="card">
+        <div class="card bg">
           <div class="card-wrapper">
             <h2>5w1H</h2>
             <p>feito em HTML , CSS e JS</p>
@@ -88,7 +89,9 @@
         </div>
         <div class="card" id="projects">
           <div class="card-extra">
-            <img src="gifs/5w1h.gif" alt="5w1h Preview">
+            <a href="https://jodecir.github.io/5w1h-board/">
+              <img src="gifs/5w1h.gif" alt="5w1h Preview">
+            </a>
           </div>
         </div>
       </div>
