UPDATE project img with target blank

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="card" id="projects">
           <div class="card-extra">
             <a href="https://jodecir.github.io/instagram-dio/">
-              <img src="gifs/instagram.gif" alt="Instagram Preview">
+              <img src="gifs/instagram.gif" target="_blank" alt="Instagram Preview">
             </a>
           </div>
         </div>
@@ -90,7 +90,7 @@
         <div class="card" id="projects">
           <div class="card-extra">
             <a href="https://jodecir.github.io/5w1h-board/">
-              <img src="gifs/5w1h.gif" alt="5w1h Preview">
+              <img src="gifs/5w1h.gif" target="_blank" alt="5w1h Preview">
             </a>
           </div>
         </div>
