FIX target blank in img

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       <div class="card-container">
         <div class="card" id="projects">
           <div class="card-extra">
-            <a href="https://jodecir.github.io/instagram-dio/">
-              <img src="gifs/instagram.gif" target="_blank" alt="Instagram Preview">
+            <a href="https://jodecir.github.io/instagram-dio/" target="_blank">
+              <img src="gifs/instagram.gif" alt="Instagram Preview">
             </a>
           </div>
         </div>
@@ -89,8 +89,8 @@
         </div>
         <div class="card" id="projects">
           <div class="card-extra">
-            <a href="https://jodecir.github.io/5w1h-board/">
-              <img src="gifs/5w1h.gif" target="_blank" alt="5w1h Preview">
+            <a href="https://jodecir.github.io/5w1h-board/" target="_blank">
+              <img src="gifs/5w1h.gif" alt="5w1h Preview">
             </a>
           </div>
         </div>
