CREATE projects tab

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/responsive.css">
     <script src="js/typewriting.js" defer></script>
+    <script src="js/hideShow.js" defer></script>
   </head>
   <body>
     <header class="header-wrapper">
@@ -64,6 +65,19 @@
         </div>
       </div>
       <div class="card-container">
+        <div class="tab"> 
+          <h2>Todos os projetos Pessoais</h2>
+          <ul>
+            <li><a href="https://jodecir.github.io/instagram-dio/" target="_blank">Instagram (Flexbox)<img src="gifs/instagram.gif"></a></li>
+            <li><a href="https://jodecir.github.io/5w1h-board/" target="_blank">5W1H (localStorage)<img src="gifs/5w1h.gif"></a></li>
+            <li><a href="https://covid19-dio-api.netlify.app/" target="_blank">Covid 19 API (React)<img src="img/not found.png"></a></li>
+            <li><a href="https://jodecir.github.io/astrological-sign-js/" target="_blank">Signo (Mobile First)<img src="img/not found.png"></a></li>
+            <li><a href="https://jodecir.github.io/media-boletim/" target="_blank">Média Boletim (Dark Mode)<img src="img/not found.png"></a></li>
+            <li><a href="https://jodecir.github.io/turismo-dio/" target="_blank">Turismo  (Flexbox)<img src="img/not found.png"></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="card-container">
         <div class="card" id="projects">
           <div class="card-extra">
             <a href="https://jodecir.github.io/instagram-dio/" target="_blank">
@@ -82,7 +96,7 @@
       <div class="card-container">
         <div class="card bg">
           <div class="card-wrapper">
-            <h2>5w1H</h2>
+            <h2>5W1H</h2>
             <p>feito em HTML , CSS e JS</p>
             <p>Utilizando localStorage</p>
           </div>
