UPDATE width & height of cards

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="card-container">
-        <div class="tab"> 
+        <div class="card tab"> 
           <h2>Todos os projetos Pessoais</h2>
           <ul>
             <li><a href="https://jodecir.github.io/instagram-dio/" target="_blank">Instagram (Flexbox)<img src="gifs/instagram.gif"></a></li>
@@ -80,11 +80,9 @@
       </div>
       <div class="card-container">
         <div class="card" id="projects">
-          <div class="card-extra">
-            <a href="https://jodecir.github.io/instagram-dio/" target="_blank">
-              <img src="gifs/instagram.gif" alt="Instagram Preview">
-            </a>
-          </div>
+          <a href="https://jodecir.github.io/instagram-dio/" target="_blank">
+            <img src="gifs/instagram.gif" alt="Instagram Preview">
+          </a>
         </div>
         <div class="card bg">
           <div class="card-wrapper">
@@ -103,11 +101,9 @@
           </div>
         </div>
         <div class="card" id="projects">
-          <div class="card-extra">
-            <a href="https://jodecir.github.io/5w1h-board/" target="_blank">
-              <img src="gifs/5w1h.gif" alt="5w1h Preview">
-            </a>
-          </div>
+          <a href="https://jodecir.github.io/5w1h-board/" target="_blank">
+            <img src="gifs/5w1h.gif" alt="5w1h Preview">
+          </a>
         </div>
       </div>
     </div>
