CREATE light theme

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 		<link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/responsive.css">
-    <script src="js/typewriting.js" defer></script>
     <script src="js/hideShow.js" defer></script>
+    <script src="js/backgroundChanger.js" defer></script>
+    <script src="js/typewriting.js" defer></script>
   </head>
   <body>
     <header class="header-wrapper">
       <div class="header">
+        <div class="background-toggles" title="Change Background">
+          <div class="background-1" onclick="changeBackground('1')"></div>
+        </div>
         <div class="checkbox-container">
           <div class="checkbox-wrapper">
             <input type="checkbox" id="toggle">
