--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <script src="js/hideShow.js" defer></script>
     <script src="js/backgroundChanger.js" defer></script>
     <script src="js/typewriting.js" defer></script>
+    <!-- Facebook Pixel Code -->
+      <script>
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window, document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '435243291366207');
+        fbq('track', 'PageView');
+      </script>
+      <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=435243291366207&ev=PageView&noscript=1"
+      /></noscript>
+    <!-- End Facebook Pixel Code -->
   </head>
   <body>
     <header class="header-wrapper">
