--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <div class="social-media">
         <a href="https://www.linkedin.com/in/jodecir/" target="_blank">Linkedin</a>
         <a href="https://github.com/Jodecir" target="_blank">Github</a>
+        <a href="https://api.whatsapp.com/send/?phone=%2B5521987774145&text&app_absent=0" target="_blank">Whatsapp</a>
       </div>
       <div class="scroll-down">
         <a href="#about" class="scroll-down-link">
