REMOVE id="projects" unstyled in index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="card-container">
-        <div class="card" id="projects">
+        <div class="card">
           <a href="https://jodecir.github.io/instagram-dio/" target="_blank">
             <img src="gifs/instagram.gif" alt="Instagram Preview">
           </a>
@@ -122,7 +122,7 @@
             <p>Utilizando localStorage</p>
           </div>
         </div>
-        <div class="card" id="projects">
+        <div class="card">
           <a href="https://jodecir.github.io/5w1h-board/" target="_blank">
             <img src="gifs/5w1h.gif" alt="5w1h Preview">
           </a>
