CREATE img alt for previews gifs in index.html

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
         </div>
       </div>
       <div class="card-container">
-        <div class="card tab"> 
+        <div class="card tab">
           <h2>Todos os projetos Pessoais</h2>
           <ul>
-            <li><a href="https://jodecir.github.io/instagram-dio/" target="_blank">Instagram (Flexbox)<img src="gifs/instagram.gif"></a></li>
-            <li><a href="https://jodecir.github.io/5w1h-board/" target="_blank">5W1H (localStorage)<img src="gifs/5w1h.gif"></a></li>
-            <li><a href="https://covid19-dio-api.netlify.app/" target="_blank">Covid 19 API (React)<img src="img/not_found.png"></a></li>
+            <li><a href="https://jodecir.github.io/instagram-dio/" target="_blank">Instagram (Flexbox)<img src="gifs/instagram.gif" alt="Instagram Preview"></a></li>
+            <li><a href="https://jodecir.github.io/5w1h-board/" target="_blank">5W1H (localStorage)<img src="gifs/5w1h.gif" alt="5W1H Preview"></a></li>
+            <li><a href="https://covid19-dio-api.netlify.app/" target="_blank">Covid 19 API (React)<img src="img/not_found.png" alt="Instagram Preview"></a></li>
             <li><a href="https://jodecir.github.io/astrological-sign-js/" target="_blank">Signo (Mobile First)<img src="img/not_found.png"></a></li>
             <li><a href="https://jodecir.github.io/media-boletim/" target="_blank">Média Boletim (Dark Mode)<img src="img/not_found.png"></a></li>
             <li><a href="https://jodecir.github.io/turismo-dio/" target="_blank">Turismo  (Flexbox)<img src="img/not_found.png"></a></li>
