--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
             <h1 class="mb-3">Sobre mim</h1>
             <hr class="my-2">
           </section>
-          <div class="card-text" id="about">Oi, Meu nome é Jodecir Neto e sou um Web-Developer, tenho uma personalidade INTP e prefiro estudar em lugares calmos, todos os dias me foco em estudar para dar uma experiência completa da linguagem que estou trabalhando, focando em funções diversas e recentes de uma forma organizada, meu objetivo é sempre aprimorar meu desenvolvimento nas aplicações que faço.
-          </div>
+          <p class="card-text" id="about">
+            Oi, Meu nome é Jodecir Neto e sou um Web-Developer, tenho uma personalidade INTP e prefiro estudar em lugares calmos, todos os dias me foco em estudar para dar uma experiência completa da linguagem que estou trabalhando, focando em funções diversas e recentes de uma forma organizada, meu objetivo é sempre aprimorar meu desenvolvimento nas aplicações que faço.
+          </p>
         </div>
         <div class="card-container fluid">
           <div class="card tab">
