FIX hrefs "security" in html

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <h1>Jodecir Neto</h1>
       <h2>Web Developer</h2>
       <div class="social-media">
-        <a href="https://www.linkedin.com/in/jodecir/" target="_blank">Linkedin</a>
-        <a href="https://github.com/Jodecir" target="_blank">Github</a>
-        <a href="https://api.whatsapp.com/send/?phone=%2B5521987774145&text&app_absent=0" target="_blank">Whatsapp</a>
+        <a href="https://www.linkedin.com/in/jodecir/" target="_blank" rel="noopener">Linkedin</a>
+        <a href="https://github.com/Jodecir" target="_blank" rel="noopener">Github</a>
+        <a href="https://api.whatsapp.com/send/?phone=%2B5521987774145&text&app_absent=0" target="_blank" rel="noopener">Whatsapp</a>
       </div>
       <div class="scroll-down">
         <a href="#about" class="scroll-down-link">
@@ -94,19 +94,19 @@
           <div class="card tab">
             <h2>Todos os projetos Pessoais</h2>
             <ul>
-              <li><a href="https://jodecir.github.io/instagram-dio/" target="_blank">Instagram (Flexbox)<img src="gifs/instagram.gif" alt="Instagram Preview"></a></li>
-              <li><a href="https://jodecir.github.io/5w1h-board/" target="_blank">5W1H (localStorage)<img src="gifs/5w1h.gif" alt="5W1H Preview"></a></li>
-              <li><a href="https://covid19-dio-api.netlify.app/" target="_blank">Covid 19 API (React)<img src="img/not_found.png" alt="Instagram Preview"></a></li>
-              <li><a href="https://jodecir.github.io/restaurante_bootstrap/" target="_blank">Sushi-Diem (Responsividade)<img src="img/not_found.png"></a></li>
-              <li><a href="https://jodecir.github.io/astrological-sign-js/" target="_blank">Signo (Mobile First)<img src="img/not_found.png"></a></li>
-              <li><a href="https://jodecir.github.io/media-boletim/" target="_blank">Média Boletim (Dark Mode)<img src="img/not_found.png"></a></li>
-              <li><a href="https://jodecir.github.io/turismo-dio/" target="_blank">Turismo (Flexbox)<img src="img/not_found.png"></a></li>
+              <li><a href="https://jodecir.github.io/instagram-dio/" target="_blank" rel="noopener">Instagram (Flexbox)<img src="gifs/instagram.gif" alt="Instagram Preview"></a></li>
+              <li><a href="https://jodecir.github.io/5w1h-board/" target="_blank" rel="noopener">5W1H (localStorage)<img src="gifs/5w1h.gif" alt="5W1H Preview"></a></li>
+              <li><a href="https://covid19-dio-api.netlify.app/" target="_blank" rel="noopener">Covid 19 API (React)<img src="img/not_found.png" alt="Instagram Preview"></a></li>
+              <li><a href="https://jodecir.github.io/restaurante_bootstrap/" target="_blank" rel="noopener">Sushi-Diem (Responsividade)<img src="img/not_found.png"></a></li>
+              <li><a href="https://jodecir.github.io/astrological-sign-js/" target="_blank" rel="noopener">Signo (Mobile First)<img src="img/not_found.png"></a></li>
+              <li><a href="https://jodecir.github.io/media-boletim/" target="_blank" rel="noopener">Média Boletim (Dark Mode)<img src="img/not_found.png"></a></li>
+              <li><a href="https://jodecir.github.io/turismo-dio/" target="_blank" rel="noopener">Turismo (Flexbox)<img src="img/not_found.png"></a></li>
             </ul>
           </div>
         </div>
         <div class="card-container">
           <div class="card">
-            <a href="https://jodecir.github.io/instagram-dio/" target="_blank">
+            <a href="https://jodecir.github.io/instagram-dio/" target="_blank" rel="noopener">
               <img src="gifs/instagram.gif" alt="Instagram Preview">
             </a>
           </div>
@@ -127,7 +127,7 @@
             </div>
           </div>
           <div class="card">
-            <a href="https://jodecir.github.io/5w1h-board/" target="_blank">
+            <a href="https://jodecir.github.io/5w1h-board/" target="_blank" rel="noopener">
               <img src="gifs/5w1h.gif" alt="5w1h Preview">
             </a>
           </div>
